fix(ui): remove scrollbars from menu dropdown

--- a/ui/src/Styles/Components/_History.scss
+++ b/ui/src/Styles/Components/_History.scss
@@ -1,6 +1,6 @@
 .dropdown-menu.components-navbar-historymenu {
   white-space: nowrap;
-  overflow: scroll;
+  overflow: overlay;
   width: 100%;
 }
 
